--- a/bai tap2.html
+++ b/bai tap2.html
@@ -9,11 +9,11 @@
    <p><b>HTML</b> là một <u>ngôn ngữ đánh dấu</u> được sử dụng để <i>tạo cấu trúc</i> cho trang web.</p> 
    <p>Nó cho phép <b>người lập trình</b> dễ dàng làm <i>nổi bật</i> nội dung quan trọng.</p>
    <p>Bạn có thể sử dụng thẻ <big>chữ lớn</big> để làm tiêu đề nổi bật và <small>chữ nhỏ</small> để ghi chú.</p>
-   <p>Ví dụ: Công thức toán học nổi tiếng <em>E = mc<sup>2</sup></em> thể hiện mối quan hệ giữa năng lượng và khối lượng.</p>
+   <p>Ví dụ: Công thức toán học nổi tiếng <b>E = mc<sup>2</sup></b> thể hiện mối quan hệ giữa năng lượng và khối lượng.</p>
    <p>Trong hóa học, ta có công thức nước là H<sub>2</sub>O, với số 2 ở <i>chỉ số dưới</i>.</p>
    <p>Thẻ <samp>samp</samp> thường được dùng để hiển thị <samp>kết quả từ chương trình</samp>.</p>
    <p><samp>Ví dụ sử dụng thẻ pre:
-for (int i = 0; i < 5; i++) { } printf("Hello World\n");</samp></p>
+        <br>for (int i = 0; i < 5; i++) { <br> printf("Hello World\n"); <br>}</samp></p>
 <p>Nếu muốn gạch bỏ nội dung, ta dùng <strike>thẻ strike</strike>, hoặc <s>thẻ s</s>, hay <del>thẻ del</del>.</p>
 <p><strong>Kết luận</strong>: Kết hợp các thẻ trên giúp văn bản rõ ràng, trực quan và dễ đọc hơn.</p>
 </body>
