--- a/bautap5.html
+++ b/bautap5.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <span style="color:green"><h1>Định dạng văn bản</h1></span>
+    <span style="color:green"></span><h1>Định dạng văn bản</h1>
     <p><u><strong>Hóa học:</strong></u> <i>Nước:</i> <span style="color:red">H<sub>2</sub>0</span> <i>Axit Sunfuric:</i> <span style="color:red">H<sub>2</sub>SO<sub>4</sub></span></p>
     <p><u><strong>Toán học:</strong></u> <i>Phương trình bậc 2:</i> <span style="color:red">ax<sup>2</sup> + bx + c = 0</span></p>
     <p><u><strong>Tin học:</strong></u> <i>Vòng lặp For:</i></p>
