--- a/bai kt/Dangnhap.html
+++ b/bai kt/Dangnhap.html
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    label {
+            display: inline-block;
+            width: 130px;
+            margin-bottom: 5px;
+        }
+</style>
 <body>
-   <center> <h1>ĐĂNG NHẬP</h1></center>
-    Tên đăng nhập: <input type="text"><br>
+<center> <h1>ĐĂNG NHẬP</h1></center>
+    <label>Tên đăng nhập:</label> <input type="text"><br>
     <br>
-    Mật khẩu: <input type="password"><br>
+    <label>Mật khẩu:</label> <input type="password"><br>
     <br>
-    <center><input type="submit" name="btn Đăng nhập" value="Đăng nhập"></center>
+    <label><input type="submit" name="btn Đăng nhập" value="Đăng nhập"></label><br>
     <text-align: right><a href="http://127.0.0.1:5500/bai%20kt/doimatkhau.html"><i><u>Đổi mật khẩu</u></i></a></text-align>
 </body>
 </html>
