--- a/bai kt/Dangnhap.html
+++ b/bai kt/Dangnhap.html
@@ -18,7 +18,7 @@
     <br>
     <label>Mật khẩu:</label> <input type="password"><br>
     <br>
-    <label><input type="submit" name="btn Đăng nhập" value="Đăng nhập"></label><br>
+    <label></label><input type="submit" name="btn Đăng nhập" value="Đăng nhập"><br>
     <text-align: right><a href="http://127.0.0.1:5500/bai%20kt/doimatkhau.html"><i><u>Đổi mật khẩu</u></i></a></text-align>
 </body>
 </html>
