--- a/bai kt/Right.html
+++ b/bai kt/Right.html
@@ -6,11 +6,28 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Right.html SACHS BÁN NHIỀU-->
+     <p><b>SÁCH BÁN NHIỀU</b></p>
+     <marquee direction="up" scrollamount="2" scrolldelay="100" onmousemove="this.stop()"
+     onmouseout="this.start()" height="250">
+    <p>
+        <a href="#"><img src="-1726817123.jpg" width="60" style="vertical-align: middle;" hspace="5">Đắc nhân tâm</a>
+    <p>
+        <a href="#"><img src="đông từ bất quy tắc.jpg" width="60" style="vertical-align: middle;" hspace="5">Động từ bất quy tắc</a>   
+    </p>
+    <p>
+        <a href="#"><img src="viet-quoc-cong-ly-thuong-kiet.jpg" width="60" style="vertical-align: middle;" hspace="5">Việt quốc công: Lý Thường Kiệt</a>
+    </p>
+    </p></marquee>
     <!--LIÊN KẾT WEBSITE-->
     <p><b>LIÊN KẾT WEBSITE</b></p>
     <select onchange="window. open(this.value,'--blank')">
         <option>--- Chọn trang liên kết ---</option>
-        <option value=""></option>
+        <option value="https://vci.edu.vn">Trường cao đẳng Công Thương Việt Nam</option>
+        <option value="https://vci.edu.vn">Khoa công nghệ thông tin và AI</option>
     </select>
+    <p><b>THỐNG KÊ TRUY CẬP</b></p>
+    <P>Đang online: 5</P>
+    <p>Tổng lượt truy cập: 12345</p>
 </body>
 </html>
