--- a/buoi 4/thiet ke sach.html
+++ b/buoi 4/thiet ke sach.html
@@ -14,7 +14,7 @@
 </tr>
 <tr>
     <td>1</td>
-    <td><img src="-1726817123.jpg" alt="Sách về tâm lý con người" SÁCH ĐẮC NHÂN TÂM></td>
+    <td><img src="-1726817123.jpg" alt="Sách về tâm lý con người"width="200" height="200">SÁCH ĐẮC NHÂN TÂM</td>
     <td>Sách về tâm lý con người</td>
 </tr>
 <tr>
