--- a/bai kt/Chitietsanpham.html
+++ b/bai kt/Chitietsanpham.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <table with="500" border="1" cellspacing="0" rows="10" columns="2">
-        <center><tr>
+        <center><tr bgcolor="pink">
             <th colspan="2">Sách Đắt Nhân Tâm</th>
         </tr></center>
         <tr><td rowspan="6"><img src="-1726817123.jpg" alt=""width="200" height="300"></td>
@@ -29,7 +29,7 @@
             bất kỳ quốc gia nào cũng đều có thể nhìn thấy. Tác phẩm được đánh giá là <br>
             quyển sách đầu tiên và hay nhất, có ảnh hưởng làm thay đổi cuộc đời của <br>
             hàng triệu người trên thế giới.</td></tr>
-            <tr style="text-align: right;"><td colspan="2"><b>Gía bán:</b> <span style="color: red;">100,00 VND/Cuốn</span></td></tr>
+            <tr style="text-align: right;"><td colspan="2"><b>Gía bán: <span style="color: red;">100,00 VND/Cuốn</span></b></td></tr>
             <tr>
                 <td colspan="2"><center><input type="submit" name="btn ĐẶT MUA" value="ĐẶT MUA"></center></td>
             </tr>
