--- a/bai kt/Trangchu.html
+++ b/bai kt/Trangchu.html
@@ -15,7 +15,7 @@
         <img src="istockphoto-1200064755-612x612.jpg" height="20" width="20">
         <a href="http://127.0.0.1:5500/bai%20kt/Dangnhap.html">Đăng nhập</a> |
         <a href="http://127.0.0.1:5500/bai%20kt/Dangky.html">Đăng ký</a> |
-        <img src="images.png" height="20" width="20" alt=""><u style="color: blue;">Giỏ hàng(trống)</u>
+        <img src="shopping-cart.png" height="20" width="20" alt=""><u style="color: blue;">Giỏ hàng(trống)</u>
     </div></header>
     <nav><ul >
         <li><a href="Trangchu.html">TRANG CHỦ</a></li>
