--- a/bai kt/Header.html
+++ b/bai kt/Header.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body style="text-align: center;">
-    <div>
+    <div class="top-left">
         <img src="bookstorte.jpg"><br>
          <h2 style="color: green;">WELCOME TO SÁCH ABC</h2>
     </div>
-    <div>
+    <div class="top-right">
         <img src="istockphoto-1200064755-612x612.jpg" height="20" width="20">
         <a href="http://127.0.0.1:5500/bai%20kt/Dangnhap.html">Đăng nhập</a> |
         <a href="http://127.0.0.1:5500/bai%20kt/Dangky.html">Đăng ký</a> |
