--- a/nhóm/Trang chủ.html
+++ b/nhóm/Trang chủ.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="slie.css">
+    <link rel="stylesheet" href="Nhẫn cưới.css">
 </head>
 <style>
     
@@ -94,12 +95,68 @@
   <button class="prev">&#10094;</button> <!-- nút trái -->
   <div class="slider-wrapper">
     <div class="slider-inner">
-      <div class="slide"><img src="image.png" alt="Sản phẩm 1" ></div>
-      <div class="slide"><img src="image.png" alt="Sản phẩm 3" ></div>
+      <div class="slide">
+        <div class="danhsach-sanpham">
+            <div class="sanpham">
+                <img src="image.png" alt="Sản phẩm 1" width="200" height="200">
+                <div class="tên">Nhẫn cưới</div>
+                <div class="giá">1,320,000 đ</div>
+            </div>
+
+            <div class="sanpham">
+                <img src="image.png" alt="Sản phẩm 1" width="200" height="200">
+                <div class="tên">Nhẫn cưới</div>
+                <div class="giá">1,320,000 đ</div>
+            </div>
+            
+            <div class="sanpham">
+                <img src="image.png" alt="Sản phẩm 1" width="200" height="200">
+                <div class="tên">Nhẫn cưới</div>
+                <div class="giá">1,320,000 đ</div>
+            </div>
+
+            <div class="sanpham">
+                <img src="image.png" alt="Sản phẩm 1" width="200" height="200">
+                <div class="tên">Nhẫn cưới</div>
+                <div class="giá">1,320,000 đ</div>
+            </div>
+
+            <div class="sanpham">
+                <img src="image.png" alt="Sản phẩm 1" width="200" height="200">
+                <div class="tên">Nhẫn cưới</div>
+                <div class="giá">1,320,000 đ</div>
+            </div>
+
+            <div class="sanpham">
+                <img src="image.png" alt="Sản phẩm 1" width="200" height="200">
+                <div class="tên">Nhẫn cưới</div>
+                <div class="giá">1,320,000 đ</div>
+            </div>
+
+            <div class="sanpham">
+                <img src="image.png" alt="Sản phẩm 1" width="200" height="200">
+                <div class="tên">Nhẫn cưới</div>
+                <div class="giá">1,320,000 đ</div>
+            </div>
+
+            <div class="sanpham">
+                <img src="image.png" alt="Sản phẩm 1" width="200" height="200">
+                <div class="tên">Nhẫn cưới</div>
+                <div class="giá">1,320,000 đ</div>
+            </div>
+
+            <div class="sanpham">
+                <img src="image.png" alt="Sản phẩm 1" width="200" height="200">
+                <div class="tên">Nhẫn cưới</div>
+                <div class="giá">1,320,000 đ</div>
+            </div>
+        </div>
+    </div>
     </div>
   </div>
   <button class="next">&#10095;</button> <!-- nút phải -->
 </div>
     </article>
 </body>
+<script src="slie.js"></script>
 </html>
