--- a/kết thúc môn/mau.html
+++ b/kết thúc môn/mau.html
@@ -54,6 +54,7 @@ header div.header-right input {
 nav {
   box-shadow: 0 6px 6px -4px rgba(0, 0, 0, 0.4);
   margin-top: 10px;
+  background: #fff;
   position: relative;
   z-index: 999;
 }
@@ -289,7 +290,7 @@ nav ul li a:hover {
 <nav>
   <ul>
     <li><a href="#">Trang chủ</a></li>
-    <li><a href="Giới thiệu.html">Giới thiệu</a></li>
+    <li><a href="#">Giới thiệu</a></li>
 
     <li class="has-submenu">
       <a href="#">Sản phẩm</a>
