--- a/kết thúc môn/Trang chủ.html
+++ b/kết thúc môn/Trang chủ.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Trang Sức Cao Cấp</title>
 <style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    color: #333;
+}
 /* --- HEADER --- */
 header {
   display: flex;
@@ -136,7 +141,11 @@ nav ul li a:hover {
   margin-top: 20px;
   border-radius: 20px;
 }
-
+.quangcao img {
+  width: 1000px;
+  height: 300px;
+  border-radius: 20px;
+}
 /* --- SLIDE --- */
 .slie {
   position: relative;
@@ -258,6 +267,107 @@ nav ul li a:hover {
   padding:2px 6px;
   font-size:12px;
 }
+.footer {
+    background-color: #fff;
+    padding: 50px 100px;
+    border-top: 1px solid #ddd;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start; /* Căn thẳng hàng */
+    gap: 60px; /* Khoảng cách giữa các cột */
+    max-width: 1400px;
+    margin: 0 auto; /* Căn giữa footer */
+}
+
+.footer-column {
+    flex: 1;
+    min-width: 250px;
+}
+
+.footer-column h4 {
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+}
+
+.footer-column ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer-column ul li {
+    margin-bottom: 8px;
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+.footer-column ul li a {
+    text-decoration: none;
+    color: #333;
+    transition: color 0.3s;
+}
+
+.footer-column ul li a:hover {
+    color: #c59d5f;
+}
+
+.footer-column p {
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+
+.footer-logo {
+    width: 200px;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+/* Mạng xã hội */
+.social-icons {
+    display: flex;
+    gap: 15px;
+    margin-bottom: 20px;
+}
+
+.social-icons img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all 0.3s;
+    border: 2px solid transparent;
+}
+
+.social-icons img:hover {
+    border-color: #c59d5f;
+    background-color: #fff7e6;
+}
+
+/* Thanh toán */
+.payment-icons {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.payment-icons img {
+    width: 45px;
+    cursor: pointer;
+}
+
+/* Footer dưới cùng */
+.footer-bottom {
+    border-top: 1px solid #ddd;
+    padding: 15px 100px;
+    text-align: center;
+    font-size: 13px;
+    color: #777;
+    max-width: 1400px;
+    margin: 0 auto;
+}
 </style>
 </head>
 <body bgcolor="#fffaf5">
@@ -332,8 +442,6 @@ nav ul li a:hover {
   <img src="image.png" alt="" width="1000" height="300">
 </div>
 
-<!-- GIỮ NGUYÊN PHẦN SLIDE & SCRIPT CỦA BẠN -->
-<!-- (copy nguyên phần cũ của bạn từ đây trở xuống, không cần sửa) -->
 <!-- HÀNG 1: TRANG SỨC VÀNG -->
 <section class="section">
   <div class="tenTS">Trang sức vàng</div>
@@ -389,7 +497,75 @@ nav ul li a:hover {
   <button id="dat-hang">Đặt hàng</button>
   <button id="dong-giohang">Đóng</button>
 </div>
+<footer class="footer">
 
+    <!-- Cột 1 -->
+    <div class="footer-column">
+        <img src="logo 200.svg" alt="Logo" class="footer-logo" />
+        <p>© 2017 Công Ty Cổ Phần Vàng Bạc Đá Quý Phú Nhuận</p>
+        <p>170E Phan Đăng Lưu, Phường Đức Nhuận, TP.Hồ Chí Minh</p>
+        <p>ĐT: 02899954223 - Fax: 028 3995 1702</p>
+        <p>Email: support@jewelry.vn</p>
+        <p>Giấy CN ĐKDN: 0300521758 do Sở Tài Chính TP.HCM cấp ngày 02/01/2004 và thay đổi lần 39 ngày 22/10/2025</p>
+        <p>Tổng đài hỗ trợ (08:00 - 21:00, miễn phí gọi): <br />
+            Gọi mua: 1800545457 (phím 1) <br />
+            Khiếu nại: 1800545457 (phím 2) <br />
+            Bảo hành: 1800545457 (phím 3)
+        </p>
+    </div>
+
+    <!-- Cột 2 -->
+    <div class="footer-column">
+        <h4>VỀ JEWELRY</h4>
+        <ul>
+            <li><a href="#">Giới thiệu về JEWELRY</a></li>
+            <li><a href="#">Câu chuyện thương hiệu</a></li>
+            <li><a href="#">Tin tức sự kiện</a></li>
+            <li><a href="#">Hệ thống cửa hàng</a></li>
+            <li><a href="#">Bảo hành & Dịch vụ</a></li>
+            <li><a href="#">Chính sách khuyến mãi</a></li>
+        </ul>
+    </div>
+
+    <!-- Cột 3 -->
+    <div class="footer-column">
+        <h4>DỊCH VỤ KHÁCH HÀNG</h4>
+        <ul>
+            <li><a href="#">Chăm sóc khách hàng</a></li>
+            <li><a href="#">Hướng dẫn chọn size nhẫn</a></li>
+            <li><a href="#">Hướng dẫn chọn trang sức</a></li>
+            <li><a href="#">Dịch vụ khắc tên</a></li>
+            <li><a href="#">Dịch vụ làm mới trang sức</a></li>
+            <li><a href="#">Dịch vụ sửa chữa trang sức</a></li>
+        </ul>
+    </div>
+
+    <!-- Cột 4 -->
+    <div class="footer-column">
+        <h4>KẾT NỐI VỚI CHÚNG TÔI</h4>
+        <div class="social-icons">
+            <img src="facebook.png" alt="Facebook" />
+            <img src="instargram.png" alt="Instagram" />
+            <img src="youtube.png" alt="YouTube" />
+            <img src="email.png" alt="Email" />
+        </div>
+
+        <h4>PHƯƠNG THỨC THANH TOÁN</h4>
+        <div class="payment-icons">
+            <img src="visa.png" alt="Visa" />
+            <img src="1156750_finance_mastercard_payment_icon.png" alt="MasterCard" />
+            <img src="7044033_zalo_icon.png" alt="ZaloPay" />
+        </div>
+
+        <h4>CHỨNG NHẬN</h4>
+        <p>Chứng nhận GIA - IGI - HRD</p>
+    </div>
+
+</footer>
+
+<div class="footer-bottom">
+    © 2025 Jewelry.vn - All Rights Reserved.
+</div>
 <script>
 // --- Slide function ---
 function initSlide(wrapperSelector, leftBtnSelector, rightBtnSelector, visibleProducts = 4) {
