--- a/kết thúc môn/Trang sức vàng.html
+++ b/kết thúc môn/Trang sức vàng.html
@@ -182,7 +182,9 @@
 
     .sanpham img:hover {
       transform: scale(1.05);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
     }
+    
 
     .sanpham .ten {
       font-weight: bold;
@@ -377,10 +379,10 @@
 <section class="section">
   <div class="tenTS">Trang sức vàng</div>
   <div class="sanpham-wrapper">
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn vàng 18k</div><div class="gia">3,200,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Bông tai vàng</div><div class="gia">2,500,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Dây chuyền vàng</div><div class="gia">4,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
-    <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Lắc tay vàng</div><div class="gia">3,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><a href="#"><img src="Vòng Đeo Tay JEWELRY Admiration Bracelet.jpg"></a><div class="ten">Vòng Đeo Tay JEWELRY Admiration Bracelet</div><div class="gia">3,200,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><img src="Vòng Đeo Tay JEWELRY Dazzling Swan Bracele.jpg"><div class="ten">Vòng Đeo Tay JEWELRY Dazzling Swan Bracele</div><div class="gia">2,500,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><img src="Vòng Đeo Tay JEWELRY Infinity Heart Bangle.jpg"><div class="ten">Vòng Đeo Tay JEWELRY Infinity Heart Bangle</div><div class="gia">4,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
+    <div class="sanpham"><img src="Vòng Đeo Tay Nữ JEWELRY Generation Bangle White.jpg"><div class="ten">Vòng Đeo Tay Nữ JEWELRY Generation Bangle White</div><div class="gia">3,800,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Nhẫn vàng 24k</div><div class="gia">5,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Bông tai vàng</div><div class="gia">2,500,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
     <div class="sanpham"><img src="Bông tai bạc 10k.jpg"><div class="ten">Dây chuyền vàng</div><div class="gia">4,000,000 đ</div><button class="mua-ngay">Mua ngay</button></div>
